# libJCBC

./: CMakeLists.txt  Makefile.am  README.md  TODO  autogen.sh  configure.ac  libjcbc-1.0.pc.in  libjcbc.pc.in  libjoren-1.0.pc.in  libjorenc-1.0.pc.in
doc/: Makefile.am
docs/: CMakeLists.txt
include/: jcbc.h
include/jcbc/: io.h  math.h  sys.h  term_esc_seq.h  util.h
include/jcbc/pp/: overload.h
src/: CMakeLists.txt  Makefile.am  io.c  io.h  jcbc.h  joren.h  math.c  math.h  sleep.c  sys.c  sys.h  term_esc_seq.h  utils.c
src/pp/: overload.h
src/sys/: mkdir_p.c  mkdir_p.h  rm.c  rm.h  wrapper_exec.c
